# mastermind

./: CONTRIBUTING.md  LICENSE  README.md  REPO-CONSOLIDATION-MANIFEST.md  deploy_unified_memory.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: test.yml
agents/: __init__.py
agents/01-forensic-analyst/: README.md  __init__.py  evidence_processor.py
agents/02-legal-automation/: __init__.py  motion_generator.py
agents/03-device-repair/: __init__.py  orchestrator.py
agents/04-malware-detection/: __init__.py  firmware_scanner.py  rootkit_detector.py
agents/05-data-recovery/: __init__.py  disk_imaging.py  file_carving.py  raid_reconstruction.py
agents/06-chain-of-custody/: __init__.py  evidence_logger.py  integrity_verifier.py
agents/07-adversarial-analysis/: __init__.py  anomaly_finder.py  pattern_detector.py
agents/08-documentation/: __init__.py  exhibit_formatter.py  forensic_reporter.py  timeline_visualizer.py
agents/09-integration-orchestrator/: __init__.py  agent_messaging.py  omni_integration.py  resource_allocator.py  workflow_coordinator.py
dashboard/: mission_control.md
omni-kernel/configs/: SKILLS_MANIFEST.json  memory-integration.yaml  omni_manifest.json  unified_mcp_config.json
omni-kernel/core/: memory_resilience.py  microwave_master.sh  mission_002_completion.py  mission_004_security.py  mission_005_master_sync.py  mission_006_pattern_audit.py  mission_007_deploy_config.py  system_check_final.py  test_flight_001.py
skills/quantum-context/: SKILL.md
skills/repo-operator/: .env.example  LICENSE  README.md  SKILL.md  (+2 more)
(+29 files in other folders)
